tests/neg/poly-fun.stk
fun bar[T](x: T): T = 3 // error
